--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "serve": "npm-run-all clean --parallel serve:*",
     "build:webpack": "webpack --mode production",
     "build:eleventy": "ELEVENTY_ENV=production eleventy",
-    "build": "run-s clean build:*"
+    "build": "run-s build:*"
   },
   "repository": {
     "type": "git",
