--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "url": "https://github.com/elmerland/oneb/issues"
   },
   "homepage": "https://github.com/elmerland/oneb#readme",
-  "devDependencies": {
+  "dependencies": {
     "@11ty/eleventy": "^0.12.1",
     "luxon": "^2.2.0",
     "npm-run-all": "^4.1.5",
