--- a/package.json
+++ b/package.json
@@ -25,10 +25,18 @@
   "homepage": "https://github.com/elmerland/oneb#readme",
   "devDependencies": {
     "@11ty/eleventy": "^0.12.1",
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.7",
+    "@babel/preset-react": "^7.16.7",
+    "babel-loader": "^8.2.3",
     "luxon": "^2.2.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
